# NeoTV

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
docs/: ANDROID.md  ARCHITECTURE.md  BUILDING.md  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/mobile/android/app/src/main/: AndroidManifest.xml
src-tauri/mobile/android/app/src/main/java/com/example/rustytv/: MainActivity.kt
src-tauri/mobile/android/app/src/main/java/com/libretv/app/: MainActivity.kt
src-tauri/mobile/android/app/src/main/java/com/neotv/app/: MainActivity.kt  MainApplication.kt  WifiInfo.kt
src-tauri/mobile/android/app/src/main/res/values/: themes.xml
src-tauri/mobile/android/app/src/main/res/values-night/: themes.xml
src-tauri/plugins/tauri-plugin-immersive-android/: Cargo.toml
src-tauri/plugins/tauri-plugin-immersive-android/android/: build.gradle
src-tauri/plugins/tauri-plugin-immersive-android/android/src/main/: AndroidManifest.xml
src-tauri/plugins/tauri-plugin-immersive-android/src/: lib.rs
src-tauri/res/android/: AndroidManifest.xml
src-tauri/res/android/values/: colors.xml  themes.xml
src-tauri/src/: api.rs  cache.rs  commands.rs  config.rs  error.rs  gst_check.rs  http.rs  lib.rs  logging.rs  m3u8.rs  main.rs  mpv_player.rs  preloader.rs  storage.rs  test_main.rs  transcoder.rs
src-tauri/src/android/: AndroidManifest.xml
src-tauri/src/android/kotlin/com/libretv/app/: MainActivity.kt
src-tauri/src/android/res/values/: themes.xml
(+90 files in other folders)
