[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
once_cell = "1.21.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.3.5"
urlencoding = "2.1.3"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls", "cookies", "gzip", "brotli", "blocking"], default-features = false }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
dirs = "5.0"
url = "2.5"
http = "1.0"
